--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,43 +1,117 @@
-.multiple_emails-container { 
-	border:1px #00ff00 solid; 
-	border-radius: 1px; 
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075); 
-	padding:0; margin: 0; cursor:text; width:100%; 
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.multiple_emails-container input { 
-
-	width:100%; 
-	border:0; 
-	outline: none; 
-	margin-bottom:30px; 
-	padding-left: 5px; 
-	
+.flex-r,
+.flex-c {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.flex-c {
+  flex-direction: column;
+}
+.flex-r {
+  flex-direction: row;
 }
 
-.multiple_emails-container input{
-	border: 0 !important;
+.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 20px 10px;
+  background: #e5e5e5;
 }
 
-.multiple_emails-container input.multiple_emails-error {	
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px red !important; 
-	outline: thin auto red !important; 
+.login-text {
+  background-color: #f6f6f6;
+  max-width: 400px;
+  min-height: 500px;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
-.multiple_emails-container ul {	
-	list-style-type:none; 
-	padding-left: 0; 
+.logo {
+  margin-bottom: 20px;
+}
+.logo span,
+.logo span i {
+  font-size: 25px;
+  color: #0d8aa7;
 }
 
-.multiple_emails-email { 
-	margin: 3px 5px 3px 5px; 
-	padding: 3px 5px 3px 5px; 
-	border:1px #BBD8FB solid;	
-	border-radius: 3px; 
-	background: #F3F7FD; 
+.login-text h1 {
+  font-size: 25px;
+}
+.login-text p {
+  font-size: 15px;
+  color: #000000b2;
 }
 
-.multiple_emails-close { 
-	float:left; 
-	margin:0 3px;
+form {
+  align-items: flex-start !important;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.input-box {
+  margin: 10px 0px;
+  width: 100%;
+}
+.label {
+  font-size: 15px;
+  color: black;
+  margin-bottom: 3px;
+}
+.input {
+  background-color: #f6f6f6;
+  padding: 0px 5px;
+  border: 2px solid rgba(216, 216, 216, 1);
+  border-radius: 10px;
+  overflow: hidden;
+  justify-content: flex-start;
+}
+
+input {
+  border: none;
+  outline: none;
+  padding: 10px 5px;
+  background-color: #f6f6f6;
+  flex: 1;
+}
+.input i {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.check span {
+  color: #000000b2;
+  font-size: 15px;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.btn {
+  color: #ffffff;
+  border-radius: 30px;
+  padding: 10px 15px;
+  background: linear-gradient(122.33deg, #68bed1 30.62%, #1e94e9 100%);
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  transition: all 0.3s linear;
+}
+
+.btn:hover {
+  transform: translateY(-2px);
+}
+.extra-line {
+  font-size: 15px;
+  font-weight: 600;
+}
+.extra-line a {
+  color: #0095b6;
 }
